--- a/tests/test2.yaml
+++ b/tests/test2.yaml
@@ -369,6 +369,36 @@ sensor:
       name: Propane test distance
     battery_level:
       name: Propane test battery level
+  - platform: hughes_power_watchdog
+    ble_client_id: airthings01
+    voltage_line_1:
+      name: "Watchdog Voltage Line 1"
+      accuracy_decimals: 0
+    current_line_1:
+      name: "Watchdog Current Line 1"
+      accuracy_decimals: 1
+    power_line_1:
+      name: "Watchdog Power Line 1"
+      accuracy_decimals: 0
+    voltage_line_2:
+      name: "Watchdog Voltage Line 2"
+      accuracy_decimals: 0
+    current_line_2:
+      name: "Watchdog Current Line 2"
+      accuracy_decimals: 1
+    power_line_2:
+      name: "Watchdog Power Line 2"
+      accuracy_decimals: 0
+    combined_power:
+      name: "Watchdog Power"
+      accuracy_decimals: 0
+    total_power:
+      name: "Watchdog Cumulative Power Usage"
+      accuracy_decimals: 1
+    error_code_value:
+      name: "Watchdog Error Code"
+    error_code_text:
+      name: "Watchdog Error Text"
   - platform: ufire_ec
     id: ufire_ec_board
     ec:
@@ -385,7 +415,7 @@ sensor:
 time:
   - platform: homeassistant
     on_time:
-      - at: '16:00:00'
+      - at: "16:00:00"
         then:
           - logger.log: It's 16:00
 
@@ -495,7 +525,6 @@ ble_client:
   - mac_address: 01:02:03:04:05:06
     id: radon_eye_ble_id
 
-
 airthings_ble:
 
 radon_eye_ble:
@@ -512,7 +541,7 @@ bluetooth_proxy:
 xiaomi_rtcgq02lm:
   - id: motion_rtcgq02lm
     mac_address: 01:02:03:04:05:06
-    bindkey: '48403ebe2d385db8d0c187f81e62cb64'
+    bindkey: "48403ebe2d385db8d0c187f81e62cb64"
 
 status_led:
   pin: GPIO2
